Fix some spacing issues with controls in the video player

--- a/app/assets/stylesheets/ui/videos/controls/icons.css
+++ b/app/assets/stylesheets/ui/videos/controls/icons.css
@@ -1,10 +1,8 @@
 .playback-controls .icon {
   position: relative;
   width: 20px;
-  height: 100%;
+  height: 23px;
   cursor: pointer;
-  margin-left: 2px;
-  margin-right: 2px;
 }
 .playback-controls .icon .indicator {
   color: var(--controls-foreground);
