--- a/app/assets/stylesheets/ui/videos/controls/playback_controls.css
+++ b/app/assets/stylesheets/ui/videos/controls/playback_controls.css
@@ -64,6 +64,7 @@
 .playback-controls ul {
   display: flex;
   align-items: center;
+  gap: 12px;
 }
 
 .video .playback-controls ul {
