--- a/app/assets/stylesheets/ui/videos/controls/track_bar.css
+++ b/app/assets/stylesheets/ui/videos/controls/track_bar.css
@@ -1,8 +1,6 @@
 .playback-controls .track {
   transition: background 0.5s ease;
   position: relative;
-  margin-left: 15px;
-  margin-right: 15px;
   height: 10px;
   cursor: pointer;
   border-radius: 4px;
